// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button/DropdownButton Button with Dropdown 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  border-right: 0.0625rem solid transparent;
}

.emotion-4 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-6:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-6:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-6:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-6:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-8 button:last-child {
  border-top-left-radius: unset;
  border-bottom-left-radius: unset;
}

.emotion-8 svg {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-10:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-10:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-12 path {
  fill: #ffffff;
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-17:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-17:disabled {
  opacity: 50%;
  background-color: #dcdfff;
  cursor: not-allowed;
}

.emotion-17:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-17:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-21 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-21:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-21:disabled {
  opacity: 50%;
  background-color: #dcdfff;
  cursor: not-allowed;
}

.emotion-21:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-21:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-23 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-23 path {
  fill: #1451dc;
}

.emotion-26 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-28 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-28:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-28:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-28:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-28:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-32 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-32:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-32:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-32:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-32:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-6"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-7"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-8"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-10"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-17"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-7"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-8"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-21"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-23"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-26"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-28"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-7"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-8"
              >
                <div
                  className="emotion-5"
                >
                  <button
                    className="emotion-32"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-11"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-23"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/DropdownButton IconButton with Dropdown 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-5:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-5:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-7 path {
  fill: #ffffff;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: #dcdfff;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-11:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-13 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-13 path {
  fill: #1451dc;
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-17:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-17:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-17:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-17:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-5"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-7"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-11"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-13"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-17"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-13"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
